# chikhapo

./: .gitignore  README.md  pyproject.toml
chikhapo_pkg/: .gitignore  README.md  pyproject.toml  requirements.txt
chikhapo_pkg/src/chikhapo/: __init__.py  evaluator.py  loader.py  task_feeder.py
chikhapo_pkg/src/chikhapo/evaluator/: base.py  word_translation.py
chikhapo_pkg/src/chikhapo/task_feeders/: base.py  word_translation.py  word_translation_with_context.py
chikhapo_pkg/src/chikhapo/utils/: languages.py  parsing.py
chikhapo_pkg/tests/: test_evaluator.py  test_loader.py  test_task_feeder.py  test_word_translation_evaluator.py  test_word_translation_task_feeder.py  test_word_translation_with_context_evaluator.py  test_word_translation_with_context_feeder.py
chikhapo_pkg/tests/raw_test_data/: equivalence_spa_eng.json
huggingface_upload/: send_omnis_to_hf.py
utils/: languages.py
